instance/common/kustomize/istio/monitoring/monitoring-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-monitoring
        protocol: HTTP
      hosts:
        - "monitoring.$(hostname)"
